<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NavDrawerActivity"
    android:weightSum="1"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:background="?android:selectableItemBackground"
            android:visibility="visible"
            android:id="@+id/toolbar_nav_drawer_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:src="@drawable/toolbar_menu"
            android:scaleType="fitXY"
            android:padding="@dimen/toolbar_button_padding"
            android:contentDescription="@string/desc_nav_drawer"/>

        <ImageButton
            android:background="?android:selectableItemBackground"
            android:visibility="visible"
            android:id="@+id/toolbar_fragment_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/toolbar_forward_arrow"
            android:scaleType="fitXY"
            android:padding="@dimen/toolbar_button_padding"
            android:contentDescription="@string/desc_nav_drawer"
            android:adjustViewBounds="false"/>

        <TextView
            android:id="@+id/app_title"
            android:text="@string/app_name"
            android:textColor="@color/toolbar_item_color"
            android:textSize="@dimen/toolbar_title_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:includeFontPadding="false" />

    </FrameLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_spin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-48dp" >

            <FrameLayout
                android:id="@+id/video_title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <me.grantland.widget.AutofitTextView
                    android:id="@+id/video_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/spin_start_title"
                    android:textStyle="bold"
                    android:textColor="@color/spin_title"
                    autofit:minTextSize="@dimen/min_spin_title_size"
                    android:textSize="@dimen/spin_title_size" />
            </FrameLayout>

            <ImageView
                android:id="@+id/upper_title_line"
                android:src="@drawable/spin_title_line"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rotation="180"
                android:contentDescription="@string/desc_title_line_up" />

            <ImageView
                android:id="@+id/lower_title_line"
                android:src="@drawable/spin_title_line"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_title_line_low"
                android:layout_below="@+id/upper_title_line"
                android:layout_marginTop="@dimen/title_line_distance" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <Button
                android:id="@+id/spin_button"
                android:background="@drawable/spin_circle"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:contentDescription="@string/desc_spin_circle"
                android:layout_centerInParent="true"
                android:text="@string/spin_button_spin"
                android:textColor="#FFFFFFFF"
                android:textSize="@dimen/spin_button_text_size"/>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>