<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="@dimen/drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/drawer_background">
        <Button
            android:id="@+id/drawer_button_profile"
            android:layout_width="@dimen/drawer_item_size"
            android:layout_height="@dimen/drawer_item_size"
            android:background="@drawable/nav_drawer_item_circle"

            android:text="@string/navigation_drawer_item_profile"
            android:textColor="@color/drawer_item_text"
            android:textSize="@dimen/drawer_item_text_size"

            android:onClick="onProfile"/>
        <Button
            android:id="@+id/drawer_button_watch"
            android:layout_width="@dimen/drawer_item_size"
            android:layout_height="@dimen/drawer_item_size"
            android:background="@drawable/nav_drawer_item_circle"

            android:text="@string/navigation_drawer_item_watch"
            android:textColor="@color/drawer_item_text"
            android:textSize="@dimen/drawer_item_text_size"

            android:onClick="onWatch"/>
        <Button
            android:id="@+id/drawer_button_settings"
            android:layout_width="@dimen/drawer_item_size"
            android:layout_height="@dimen/drawer_item_size"
            android:background="@drawable/nav_drawer_item_circle"

            android:text="@string/navigation_drawer_item_settings"
            android:textColor="@color/drawer_item_text"
            android:textSize="@dimen/drawer_item_text_size"

            android:onClick="onSettings"/>
        <Button
            android:id="@+id/drawer_button_help"
            android:layout_width="@dimen/drawer_item_size"
            android:layout_height="@dimen/drawer_item_size"
            android:background="@drawable/nav_drawer_item_circle"

            android:text="@string/navigation_drawer_item_help"
            android:textColor="@color/drawer_item_text"
            android:textSize="@dimen/drawer_item_text_size"

            android:onClick="onHelp"/>
        </LinearLayout>

</android.support.v4.widget.DrawerLayout>
